fixed mobile header and mobile overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,6 +113,7 @@
 html,
 body {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 @layer base {
